src/objects/PANG_Partnership_Country__c.object
<CustomObject>
    <description>Join object relating RWE Partnerships to RWE Countries</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>RWE Country</label>
        <referenceTo>PANG_Country__c</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>RWE_Partnership_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partnership__c</fullName>
        <label>Partnership</label>
        <referenceTo>PANG_Partnership__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>RWE_Partnership_Countries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RWE Partnership Country</label>
    <nameField>
        <displayFormat>RWE-PC-{000000000}</displayFormat>
        <label>Partnership Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Partnership Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>